--- a/src/style/main.css
+++ b/src/style/main.css
@@ -5,7 +5,11 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Mulish", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  padding: 0;
+  margin: 0;
 }
 
 button:focus,
@@ -20,6 +24,7 @@ input:focus {
   padding-bottom: 20px;
   padding-left: 32px;
   padding-right: 70px;
+  margin-bottom: 30px;
 }
 
 .menu-button {
@@ -60,6 +65,7 @@ input:focus {
   background-color: transparent;
   border: none;
   padding: 12px 23px;
+  width: 100%;
 }
 .input-btn {
   width: 19px;
@@ -96,6 +102,65 @@ input:focus {
 .user-avatar {
   width: 40px;
   height: 40px;
+  border-radius: 50%;
+}
+
+.sidebar {
+  padding-left: 32px;
+}
+
+.nav-title {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 23px;
+  margin-bottom: 30px;
+}
+.nav-menu {
+  margin-top: 0;
+  margin-bottom: 60px;
+  padding-left: 0;
+  list-style: none;
+}
+.nav-item {
+  margin-bottom: 28px;
+}
+.nav-item .icon {
+  fill: #898989;
+}
+.nav-item:hover {
+  color: #ff0000;
+}
+.nav-item:hover .icon {
+  fill: #ff0000;
+}
+.nav-item:hover .nav-link {
+  color: #ff0000;
+}
+.nav-link {
+  display: block;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: #898989;
+}
+.nav-icon {
+  width: 21px;
+  height: 21px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 13px;
+}
+.nav-img {
+  width: 26px;
+  height: 26px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 13px;
+}
+.nav-img img {
+  width: 100%;
   border-radius: 50%;
 }
 /*# sourceMappingURL=main.css.map */
