--- a/src/style/main.css
+++ b/src/style/main.css
@@ -30,6 +30,7 @@ input:focus {
   left: 0;
   width: 100%;
   background-color: #fff;
+  z-index: 10;
 }
 
 .menu-button {
@@ -191,25 +192,30 @@ input:focus {
 
 .channel {
   position: relative;
+  margin-bottom: 49px;
+}
+.channel-header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+  padding-right: 10%;
 }
 .channel-title {
   text-decoration: none;
+  width: 70%;
   display: flex;
   align-items: center;
   color: #19202c;
   font-size: 26px;
   line-height: 33px;
   font-weight: bold;
-  margin-bottom: 30px;
 }
 .channel-buttons {
-  position: absolute;
-  right: 10%;
-  top: 5px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 66px;
+  margin-left: 40px;
 }
 .channel-button {
   cursor: pointer;
@@ -234,7 +240,7 @@ input:focus {
   width: 250px;
 }
 .video-thumb {
-  width: 250px;
+  width: 100%;
   height: 150px;
   border-radius: 14px;
   overflow: hidden;
@@ -282,9 +288,48 @@ input:focus {
 }
 
 .thumbnail {
-  width: 250px;
-  height: 150px;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   object-position: center 70%;
+}
+
+.recommended-title {
+  margin-bottom: 0;
+  font-size: 26px;
+  line-height: 33px;
+}
+.recommended-slide {
+  width: 540px;
+  margin: 0 30px;
+}
+.recommended-slider .video-card {
+  width: 540px;
+}
+.recommended-slider .video-thumb {
+  height: 300px;
+}
+
+.recommended-channel-title {
+  display: flex;
+}
+.recommended-channel-subtitle {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+  color: #c2c2c2;
+  margin-left: 19px;
+}
+
+.subscribe {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+  color: #fff;
+  padding: 10px 19px;
+  background-color: #f00;
+  border: none;
+  border-radius: 30px;
+  cursor: pointer;
 }
 /*# sourceMappingURL=main.css.map */
