--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -30,6 +30,7 @@ input:focus {
   left: 0;
   width: 100%;
   background-color: #fff;
+  z-index: 10;
 }
 
 .menu {
@@ -201,24 +202,29 @@ input:focus {
 
 .channel {
   position: relative;
+  margin-bottom: 49px;
+  &-header {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+    padding-right: 10%;
+  }
   &-title {
     text-decoration: none;
+    width: 70%;
     display: flex;
     align-items: center;
     color: #19202c;
     font-size: 26px;
     line-height: 33px;
     font-weight: bold;
-    margin-bottom: 30px;
   }
   &-buttons {
-    position: absolute;
-    right: 10%;
-    top: 5px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 66px;
+    margin-left: 40px;
   }
   &-button {
     cursor: pointer;
@@ -246,7 +252,7 @@ input:focus {
     width: 250px;
   }
   &-thumb {
-    width: 250px;
+    width: 100%;
     height: 150px;
     border-radius: 14px;
     overflow: hidden;
@@ -296,8 +302,55 @@ input:focus {
 }
 
 .thumbnail {
-  width: 250px;
-  height: 150px;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   object-position: center 70%;
+}
+
+.recommended {
+  &-title {
+    margin-bottom: 0;
+    font-size: 26px;
+    line-height: 33px;
+  }
+  &-slide {
+    width: 540px;
+    margin: 0 30px;
+  }
+  &-slider {
+    .video {
+      &-card {
+        width: 540px;
+      }
+      &-thumb {
+        height: 300px;
+      }
+    }
+  }
+}
+
+.recommended-channel {
+  &-title {
+    display: flex;
+  }
+  &-subtitle {
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 20px;
+    color: #c2c2c2;
+    margin-left: 19px;
+  }
+}
+
+.subscribe {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+  color: #fff;
+  padding: 10px 19px;
+  background-color: #f00;
+  border: none;
+  border-radius: 30px;
+  cursor: pointer;
 }
