--- a/src/style/main.css
+++ b/src/style/main.css
@@ -118,9 +118,10 @@ input:focus {
   height: calc(100% - 114px);
   top: 114px;
   overflow-y: auto;
-  width: 14%;
+  width: 200px;
   -ms-overflow-style: none;
   background-color: #fff;
+  z-index: 9;
 }
 
 .sidebar::-webkit-scrollbar {
@@ -131,8 +132,9 @@ input:focus {
   width: 100%;
   height: 400px;
   margin-top: 85px;
-  padding-left: 14%;
+  padding-left: 255px;
   padding-top: 30px;
+  padding-right: 70px;
 }
 
 .nav-title {
@@ -198,7 +200,7 @@ input:focus {
   display: flex;
   justify-content: space-between;
   margin-bottom: 30px;
-  padding-right: 10%;
+  padding-right: 1%;
 }
 .channel-title {
   text-decoration: none;
@@ -230,14 +232,6 @@ input:focus {
 }
 .channel-text {
   margin-left: 20px;
-}
-.channel-slide {
-  width: 250px;
-  margin: 0 40px;
-}
-
-.video-card {
-  width: 250px;
 }
 .video-thumb {
   width: 100%;
@@ -300,11 +294,7 @@ input:focus {
   line-height: 33px;
 }
 .recommended-slide {
-  width: 540px;
-  margin: 0 30px;
-}
-.recommended-slider .video-card {
-  width: 540px;
+  width: 100%;
 }
 .recommended-slider .video-thumb {
   height: 300px;
@@ -331,5 +321,136 @@ input:focus {
   border: none;
   border-radius: 30px;
   cursor: pointer;
+}
+
+.mobile-sidebar {
+  display: none;
+}
+.mobile-search {
+  display: none;
+  background-color: transparent;
+  border: none;
+  cursor: poiner;
+}
+
+@media (max-width: 1200px) {
+  .subscribe {
+    font-size: 14px;
+    line-height: 18px;
+  }
+}
+@media (max-width: 860px) {
+  .icons {
+    display: none;
+  }
+
+  .user {
+    margin-left: auto;
+  }
+
+  .recommended-channel-text {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .subscribe {
+    font-size: 12px;
+    line-height: 16px;
+  }
+}
+@media (max-width: 640px) {
+  .menu-button {
+    display: none;
+  }
+
+  .sidebar {
+    display: none;
+  }
+
+  .content {
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+
+  .video-thumb {
+    height: 300px;
+  }
+
+  .mobile-sidebar {
+    display: block;
+    position: fixed;
+    z-index: 99;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #fff;
+  }
+  .mobile-sidebar .nav-menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-bottom: 0;
+    padding-top: 13px;
+    padding-bottom: 11px;
+    border-top: 1px solid #f1f1f1;
+  }
+  .mobile-sidebar .nav-item {
+    margin-bottom: 0;
+  }
+  .mobile-sidebar .nav-link {
+    display: flex;
+    flex-direction: column;
+  }
+  .mobile-sidebar .nav-icon {
+    margin-right: 0;
+  }
+  .mobile-sidebar .nav-text {
+    font-size: 13px;
+    line-height: 18px;
+  }
+
+  .mobile-search {
+    display: block;
+    margin-left: auto;
+  }
+
+  .input-group {
+    position: fixed;
+    top: -100px;
+    left: 0;
+    opacity: 0;
+    width: 68%;
+    margin-left: 28px;
+    transition: top 0.5s;
+  }
+
+  .input-group.isOpen {
+    opacity: 1;
+    top: 24px;
+  }
+
+  .user {
+    margin-left: 20px;
+  }
+
+  .channel-buttons {
+    display: none;
+  }
+
+  .swiper-wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+  .swiper-slide {
+    margin-bottom: 40px;
+  }
+
+  .channel {
+    margin-bottom: 0;
+  }
+
+  .recommended-channel {
+    padding-bottom: 50px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
