--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -123,10 +123,10 @@ input:focus {
   height: calc(100% - 114px);
   top: 114px;
   overflow-y: auto;
-  // min-width: 235px;
-  width: 14%;
+  width: 200px;
   -ms-overflow-style: none;
   background-color: #fff;
+  z-index: 9;
 }
 
 .sidebar::-webkit-scrollbar {
@@ -137,8 +137,9 @@ input:focus {
   width: 100%;
   height: 400px;
   margin-top: 85px;
-  padding-left: 14%;
+  padding-left: 255px;
   padding-top: 30px;
+  padding-right: 70px;
 }
 
 .nav {
@@ -207,7 +208,7 @@ input:focus {
     display: flex;
     justify-content: space-between;
     margin-bottom: 30px;
-    padding-right: 10%;
+    padding-right: 1%;
   }
   &-title {
     text-decoration: none;
@@ -242,15 +243,12 @@ input:focus {
   }
 
   &-slide {
-    width: 250px;
-    margin: 0 40px;
+    // width: 250px;
+    // margin: 0 40px;
   }
 }
 
 .video {
-  &-card {
-    width: 250px;
-  }
   &-thumb {
     width: 100%;
     height: 150px;
@@ -315,14 +313,10 @@ input:focus {
     line-height: 33px;
   }
   &-slide {
-    width: 540px;
-    margin: 0 30px;
+    width: 100%;
   }
   &-slider {
     .video {
-      &-card {
-        width: 540px;
-      }
       &-thumb {
         height: 300px;
       }
@@ -353,4 +347,135 @@ input:focus {
   border: none;
   border-radius: 30px;
   cursor: pointer;
+}
+
+.mobile {
+  &-sidebar {
+    display: none;
+  }
+  &-search {
+    display: none;
+    background-color: transparent;
+    border: none;
+    cursor: poiner;
+  }
+}
+
+@media (max-width: 1200px) {
+  .subscribe {
+    font-size: 14px;
+    line-height: 18px;
+  }
+}
+
+@media (max-width: 860px) {
+  .icons {
+    display: none;
+  }
+  .user {
+    margin-left: auto;
+  }
+  .recommended-channel-text {
+    display: flex;
+    flex-direction: column;
+  }
+  .subscribe {
+    font-size: 12px;
+    line-height: 16px;
+  }
+}
+
+@media (max-width: 640px) {
+  .menu-button {
+    display: none;
+  }
+  .sidebar {
+    display: none;
+  }
+  .content {
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+
+  .video {
+    &-thumb {
+      height: 300px;
+    }
+  }
+  .mobile-sidebar {
+    display: block;
+    position: fixed;
+    z-index: 99;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #fff;
+    .nav {
+      &-menu {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        margin-bottom: 0;
+        padding-top: 13px;
+        padding-bottom: 11px;
+        border-top: 1px solid #f1f1f1;
+      }
+      &-item {
+        margin-bottom: 0;
+      }
+      &-link {
+        display: flex;
+        flex-direction: column;
+      }
+      &-icon {
+        margin-right: 0;
+      }
+      &-text {
+        font-size: 13px;
+        line-height: 18px;
+      }
+    }
+  }
+
+  .mobile-search {
+    display: block;
+    margin-left: auto;
+  }
+  .input-group {
+    position: fixed;
+    top: -100px;
+    left: 0;
+    opacity: 0;
+    width: 68%;
+    margin-left: 28px;
+    transition: top 0.5s;
+  }
+
+  .input-group.isOpen {
+    opacity: 1;
+    top: 24px;
+  }
+
+  .user {
+    margin-left: 20px;
+  }
+
+  .channel-buttons {
+    display: none;
+  }
+  .swiper {
+    &-wrapper {
+      display: flex;
+      flex-direction: column;
+    }
+    &-slide {
+      margin-bottom: 40px;
+    }
+  }
+  .channel {
+    margin-bottom: 0;
+  }
+  .recommended-channel {
+    padding-bottom: 50px;
+  }
 }
